# wavesim_rust

./: .gitignore  Cargo.toml  PROMPTS.md  README.md
examples/: analytical_helmholtz.rs  benchmark_3d.rs  boundary_approximation.rs  helmholtz_1d_analytical.rs  helmholtz_3d_advanced.rs  helmholtz_3d_create_source.rs  helmholtz_3d_helmholtz.rs  helmholtz_3d_lens.rs  helmholtz_3d_plot_simple.rs  helmholtz_3d_with_plots.rs  helmholtz_parallel.rs  helmholtz_simple.rs  helmholtz_simulate.rs  maxwell_fdtd.rs  maxwell_fdtd_parallel.rs  room_acoustics_simple.rs  test_fallback_warning.rs
examples_notworking/: maxwell_3d_with_plots.README.md  maxwell_3d_with_plots.rs
scripts/: run_benchmark_comparison.sh
src/: domain_decomposition.rs  lib.rs  parallel_utils.rs
src/domain/: block_decomposition.rs  domain_trait.rs  feti.rs  helmholtz.rs  helmholtz_parallel.rs  helmholtz_schwarz.rs  iteration.rs  maxwell.rs  maxwell_parallel.rs  mod.rs  schwarz_wave.rs  simulation.rs
src/engine/: array.rs  block.rs  mod.rs  operations.rs  sparse.rs
src/engine/backend/: accelerate.rs  mod.rs  rustfft.rs
src/utilities/: analytical.rs  domain_sizing.rs  mod.rs  sources.rs
tests/: debug_fft.rs  debug_helmholtz.rs  integration_tests.rs  test_accuracy.rs  test_analytical.rs  test_basics.rs  test_debug_convergence.rs  test_engine.rs  test_maxwell_utilities.rs  test_operators.rs  test_scaling_debug.rs  test_small_pert_diagnostic.rs  test_small_perturbations.rs  test_utils.rs
