[package]
name = "wavesim"
version = "0.1.13"
edition = "2021"
authors = ["Ivo Vellekoop <i.m.vellekoop@utwente.nl>", "Swapnil Mache <s.mache@utwente.nl>"]
description = "A library for simulating wave propagation using the modified Born series - Rust implementation"
license = "MIT"
repository = "https://github.com/pierreaubert/wavesim_rust"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.10"
num_cpus = "1.13"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
rustfft = "6.2"
rand = "0.8"
plotly = "0.9"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
proptest = "1.5"
rand = "0.8"
rand_distr = "0.4"

[lib]
name = "wavesim"
path = "src/lib.rs"

[[bin]]
name = "room_acoustics"
path = "bin/room_acoustics.rs"

